--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "json": "^9.0.6",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "styled-components": "^4.4.1"
