--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "setup-deploy": "app-app --deploy && yarn deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postdeploy": "echo 'Your site was deployed to https://new-mood-celestelingo.netlify.com'"
+    "postdeploy": "echo 'Your site was deployed to https://new-mood.netlify.com'"
   },
   "browserslist": [
     ">0.2%",
